--- a/.azure/pipelines/azure-pipelines-mirror-within-azdo.yml
+++ b/.azure/pipelines/azure-pipelines-mirror-within-azdo.yml
@@ -31,12 +31,8 @@ jobs:
         value: $(Build.SourceBranch)
       steps:
       - script: |
-          git clone https://dn-bot:$(dn-bot-dnceng-build-rw-code-rw)@dev.azure.com/dnceng/internal/_git/$(AzdoRepo) $(WorkingDirectoryName)
+          git clone https://dn-bot:$(dn-bot-dnceng-build-rw-code-rw)@dev.azure.com/dnceng/internal/_git/$(AzdoRepo) $(WorkingDirectoryName) --recursive --no-tags --branch $(TargetBranchName)
         displayName: Clone AzDO repo
-      - script: |
-          git checkout -b $(TargetBranchName) -t origin/$(TargetBranchName)
-        displayName: Check out target branch
-        workingDirectory: $(WorkingDirectoryName)
       - script: |
           git -c user.email="dotnet-bot@microsoft.com" -c user.name="dotnet-bot" merge origin/$(BranchToMirror) -m "Merge in '$(BranchToMirror)' changes" 
         displayName: Merge head branch to target branch
