Only run on check-ins

--- a/.azure/pipelines/azure-pipelines-mirror-within-azdo.yml
+++ b/.azure/pipelines/azure-pipelines-mirror-within-azdo.yml
@@ -17,6 +17,7 @@ jobs:
     jobs:
     - job: Merge_Azure_DevOps_Branches
       enableSBOM: false
+      condition: eq(variables['Build.Reason'], 'IndividualCI')
       pool:
         name: NetCore1ESPool-Internal
         demands: ImageOverride -equals Build.Server.Amd64.VS2019
