--- a/.azure/pipelines/azure-pipelines-mirror-within-azdo.yml
+++ b/.azure/pipelines/azure-pipelines-mirror-within-azdo.yml
@@ -49,13 +49,13 @@ jobs:
         condition: always()
         inputs:
           scriptType: inlineScript
-          arguments: '$(AzdoRepo) $(BranchToMirror)'
+          arguments: '$(BranchToMirror)'
           workingDirectory: $(WorkingDirectoryName)
           inlineScript: |
-            param([string]$repo, [string]$branch)
+            param([string]$branch)
 
             $commit = (git rev-parse HEAD).Substring(0, 7)
-            $target = "$repo $branch".Replace('/', ' ')
+            $target = "$branch".Replace('/', ' ')
 
             Write-Host "##vso[build.updatebuildnumber]$target $commit"
             Write-Host "##vso[build.addbuildtag]$target"
