--- a/.azure/pipelines/azure-pipelines-mirror-within-azdo.yml
+++ b/.azure/pipelines/azure-pipelines-mirror-within-azdo.yml
@@ -17,7 +17,7 @@ jobs:
     jobs:
     - job: Merge_Azure_DevOps_Branches
       enableSBOM: false
-      condition: and(eq(variables['System.TeamProject'], 'internal'), eq(variables['Build.Reason'], 'BatchedCI'))
+      condition: and(contains(variables['Build.SourceBranch'], 'internal'), eq(variables['Build.Reason'], 'BatchedCI'))
       pool:
         name: NetCore1ESPool-Internal
         demands: ImageOverride -equals Build.Server.Amd64.VS2019
