--- a/eng/TrimmableProjects.props
+++ b/eng/TrimmableProjects.props
@@ -66,6 +66,8 @@
     <TrimmableProject Include="Microsoft.AspNetCore.HttpsPolicy" />
     <TrimmableProject Include="Microsoft.AspNetCore.Localization.Routing" />
     <TrimmableProject Include="Microsoft.AspNetCore.Localization" />
+    <TrimmableProject Include="Microsoft.AspNetCore.OutputCaching.Abstractions" />
+    <TrimmableProject Include="Microsoft.AspNetCore.OutputCaching" />
     <TrimmableProject Include="Microsoft.AspNetCore.RateLimiting" />
     <TrimmableProject Include="Microsoft.AspNetCore.ResponseCaching.Abstractions" />
     <TrimmableProject Include="Microsoft.AspNetCore.ResponseCaching" />
