Allow explicit manual runs of mirror pipeline

--- a/.azure/pipelines/azure-pipelines-mirror-within-azdo.yml
+++ b/.azure/pipelines/azure-pipelines-mirror-within-azdo.yml
@@ -4,6 +4,13 @@ trigger:
   branches:
     include:
     - internal/release/6.0
+    
+parameters:
+# Run the pipeline manually (usually disallowed)
+- name: manualRun
+  default: false
+  displayName: Are you sure you want to run this pipeline manually?
+  type: boolean
 
 variables:
   - group: Mirror-Credentials
@@ -17,7 +24,7 @@ jobs:
     jobs:
     - job: Merge_Azure_DevOps_Branches
       enableSBOM: false
-      condition: and(contains(variables['Build.SourceBranch'], 'internal'), eq(variables['Build.Reason'], 'BatchedCI'))
+      condition: or((and(contains(variables['Build.SourceBranch'], 'internal'), eq(variables['Build.Reason'], 'BatchedCI'))), (eq(parameters.manualRun, 'true')))
       pool:
         name: NetCore1ESPool-Internal
         demands: ImageOverride -equals Build.Server.Amd64.VS2019
