--- a/.azure/pipelines/azure-pipelines-mirror-within-azdo.yml
+++ b/.azure/pipelines/azure-pipelines-mirror-within-azdo.yml
@@ -21,6 +21,7 @@ jobs:
   parameters:
     enableTelemetry: true
     helixRepo: dotnet/arcade
+    manualRun: ${{ parameters.manualRun }}
     jobs:
     - job: Merge_Azure_DevOps_Branches
       enableSBOM: false
