--- a/.azure/pipelines/azure-pipelines-mirror-within-azdo.yml
+++ b/.azure/pipelines/azure-pipelines-mirror-within-azdo.yml
@@ -17,53 +17,53 @@ variables:
 
 # Merges code from one AzDO branch into another
 jobs:
-- template: /eng/common/templates/jobs/jobs.yml
-  parameters:
-    enableTelemetry: true
-    helixRepo: dotnet/arcade
-    manualRun: ${{ parameters.manualRun }}
-    jobs:
-    - job: Merge_Azure_DevOps_Branches
-      enableSBOM: false
-      condition: or(and(contains(variables['Build.SourceBranch'], 'internal'), eq(variables['Build.Reason'], 'BatchedCI')), eq(parameters.manualRun, 'true'))
-      pool:
-        name: NetCore1ESPool-Internal
-        demands: ImageOverride -equals Build.Server.Amd64.VS2019
-      variables:
-      - name: WorkingDirectoryName
-        value: repo-dir
-      - name: AzdoRepo
-        value: dotnet-aspnetcore
-      - name: TargetBranchName
-        value: $(Build.SourceBranch)-nonstable
-      - name: BranchToMirror
-        value: $(Build.SourceBranch)
-      steps:
-      - script: |
-          git clone https://dn-bot:$(dn-bot-dnceng-build-rw-code-rw)@dev.azure.com/dnceng/internal/_git/$(AzdoRepo) $(WorkingDirectoryName) --recursive --no-tags --branch $(TargetBranchName)
-        displayName: Clone AzDO repo
-      - script: |
-          git -c user.email="dotnet-bot@microsoft.com" -c user.name="dotnet-bot" merge origin/$(BranchToMirror) -m "Merge in '$(BranchToMirror)' changes" 
-        displayName: Merge head branch to target branch
-        workingDirectory: $(WorkingDirectoryName)
-      - script: |
-          git push origin $(TargetBranchName)
-        displayName: Push changes to Azure DevOps repo
-        workingDirectory: $(WorkingDirectoryName)
-
-      - task: PowerShell@1
-        displayName: Broadcast target, branch, commit in metadata
-        continueOnError: true
-        condition: always()
-        inputs:
-          scriptType: inlineScript
-          arguments: '$(BranchToMirror)'
+- ${{ if or(and(contains(variables['Build.SourceBranch'], 'internal'), eq(variables['Build.Reason'], 'BatchedCI')), eq(parameters.manualRun, 'true')) }}:
+  - template: /eng/common/templates/jobs/jobs.yml
+    parameters:
+      enableTelemetry: true
+      helixRepo: dotnet/aspnetcore
+      manualRun: ${{ parameters.manualRun }}
+      jobs:
+      - job: Merge_Azure_DevOps_Branches
+        enableSBOM: false
+        pool:
+          name: NetCore1ESPool-Internal
+          demands: ImageOverride -equals Build.Server.Amd64.VS2019
+        variables:
+        - name: WorkingDirectoryName
+          value: repo-dir
+        - name: AzdoRepo
+          value: dotnet-aspnetcore
+        - name: TargetBranchName
+          value: $(Build.SourceBranch)-nonstable
+        - name: BranchToMirror
+          value: $(Build.SourceBranch)
+        steps:
+        - script: |
+            git clone https://dn-bot:$(dn-bot-dnceng-build-rw-code-rw)@dev.azure.com/dnceng/internal/_git/$(AzdoRepo) $(WorkingDirectoryName) --recursive --no-tags --branch $(TargetBranchName)
+          displayName: Clone AzDO repo
+        - script: |
+            git -c user.email="dotnet-bot@microsoft.com" -c user.name="dotnet-bot" merge origin/$(BranchToMirror) -m "Merge in '$(BranchToMirror)' changes"
+          displayName: Merge head branch to target branch
           workingDirectory: $(WorkingDirectoryName)
-          inlineScript: |
-            param([string]$branch)
+        - script: |
+            git push origin $(TargetBranchName)
+          displayName: Push changes to Azure DevOps repo
+          workingDirectory: $(WorkingDirectoryName)
 
-            $commit = (git rev-parse HEAD).Substring(0, 7)
-            $target = "$branch".Replace('/', ' ')
+        - task: PowerShell@1
+          displayName: Broadcast target, branch, commit in metadata
+          continueOnError: true
+          condition: always()
+          inputs:
+            scriptType: inlineScript
+            arguments: '$(BranchToMirror)'
+            workingDirectory: $(WorkingDirectoryName)
+            inlineScript: |
+              param([string]$branch)
 
-            Write-Host "##vso[build.updatebuildnumber]$target $commit"
-            Write-Host "##vso[build.addbuildtag]$target"
+              $commit = (git rev-parse HEAD).Substring(0, 7)
+              $target = "$branch".Replace('/', ' ')
+
+              Write-Host "##vso[build.updatebuildnumber]$target $commit"
+              Write-Host "##vso[build.addbuildtag]$target"
