--- a/.azure/pipelines/azure-pipelines-mirror-within-azdo.yml
+++ b/.azure/pipelines/azure-pipelines-mirror-within-azdo.yml
@@ -17,7 +17,7 @@ variables:
 
 # Merges code from one AzDO branch into another
 jobs:
-- ${{ if or(and(contains(variables['Build.SourceBranch'], 'internal'), eq(variables['Build.Reason'], 'BatchedCI')), eq(parameters.manualRun, 'true')) }}:
+- ${{ if and(contains(variables['Build.SourceBranch'], 'internal'), or(eq(variables['Build.Reason'], 'BatchedCI'), eq(parameters.manualRun, 'true'))) }}:
   - template: /eng/common/templates/jobs/jobs.yml
     parameters:
       enableTelemetry: true
