--- a/src/Installers/Windows/AspNetCoreModule-Setup/IIS-Setup/IIS-Common/lib/IISSetup.CommonLib.vcxproj
+++ b/src/Installers/Windows/AspNetCoreModule-Setup/IIS-Setup/IIS-Common/lib/IISSetup.CommonLib.vcxproj
@@ -65,17 +65,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="acache.cxx" />
-    <ClCompile Include="ahutil.cpp" />
-    <ClCompile Include="base64.cxx" />
-    <ClCompile Include="datetime.cxx" />
-    <ClCompile Include="multisz.cxx" />
-    <ClCompile Include="multisza.cxx" />
-    <ClCompile Include="normalize.cxx" />
-    <ClCompile Include="stringa.cpp" />
-    <ClCompile Include="stringu.cpp" />
-    <ClCompile Include="ulparse.cxx" />
-    <ClCompile Include="util.cxx" />
+    <ClCompile Include="$(RepoRoot)src\Servers\IIS\AspNetCoreModuleV2\IISLib\ahutil.cpp" />
+    <ClCompile Include="$(RepoRoot)src\Servers\IIS\AspNetCoreModuleV2\IISLib\stringa.cpp" />
+    <ClCompile Include="$(RepoRoot)src\Servers\IIS\AspNetCoreModuleV2\IISLib\stringu.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="precomp.h" />
