--- a/src/Framework/App.Runtime/src/Microsoft.AspNetCore.App.Runtime.csproj
+++ b/src/Framework/App.Runtime/src/Microsoft.AspNetCore.App.Runtime.csproj
@@ -223,6 +223,10 @@ This package is an internal implementation of the .NET Core SDK and is not meant
       $(CrossGenDependsOn);
       _BatchCrossGenAssemblies;
     </CrossGenDependsOn>
+    <CrossGenDependsOn>
+      $(CrossGenDependsOn);
+      _GenerateComposites;
+    </CrossGenDependsOn>
     <!-- _GetBuildOutputFilesWithTfm executes in a separate context from Build, GenerateNuspec, and so on. -->
     <TargetsForTfmSpecificBuildOutput>
       $(TargetsForTfmSpecificBuildOutput);
@@ -459,6 +463,34 @@ This package is an internal implementation of the .NET Core SDK and is not meant
     <Exec Command="&quot;$(CrossgenToolPath)&quot; $(Crossgen2Args) -o:&quot;$(TargetDir)%(FileName)%(Extension)&quot; &quot;%(IntermediateCrossgenAssembly.Identity)&quot;"
           IgnoreStandardErrorWarningFormat="true"
           StandardOutputImportance="High" />
+  </Target>
+
+  <Target Name="_GenerateComposites"
+    DependsOnTargets="_ExpandRuntimePackageRoot">
+
+    <PropertyGroup>
+      <CompositeTargetDir>$(TargetDir)Composite\</CompositeTargetDir>
+
+      <CompositeTargetOs>$(TargetOsName)</CompositeTargetOs>
+      <CompositeTargetOs Condition="'$(TargetOsName)' == 'win'">windows</CompositeTargetOs>
+      <CompositeTargetOs Condition="'$(TargetOsName)' == 'linux-musl'">linux</CompositeTargetOs>
+
+      <RuntimesPath>$(RuntimePackageRoot)runtimes\$(TargetOsName)-$(TargetArchitecture)\</RuntimesPath>
+
+      <BaseAssemblies>$(RuntimesPath)lib\$(DefaultNetCoreTargetFramework)\*.dll</BaseAssemblies>
+      <BaseAssemblies>$(BaseAssemblies) $(RuntimesPath)native\*.dll</BaseAssemblies>
+
+      <CompositeArgs>--composite</CompositeArgs>
+      <CompositeArgs>$(CompositeArgs) --targetarch:$(TargetArchitecture)</CompositeArgs>
+      <CompositeArgs>$(CompositeArgs) --targetos:$(CompositeTargetOs)</CompositeArgs>
+      <CompositeArgs>$(CompositeArgs) $(BaseAssemblies)</CompositeArgs>
+      <CompositeArgs>$(CompositeArgs) $(TargetDir)*.dll</CompositeArgs>
+    </PropertyGroup>
+
+    <RemoveDir Directories="$(CompositeTargetDir)" />
+    <MakeDir Directories="$(CompositeTargetDir)" />
+
+    <Exec Command="&quot;$(CrossgenToolPath)&quot; $(CompositeArgs) -o:&quot;$(CompositeTargetDir)full-composite.r2r.dll&quot;" />
   </Target>
 
   <!--
