--- a/src/Servers/Kestrel/samples/Http3SampleApp/appsettings.Development.json
+++ b/src/Servers/Kestrel/samples/Http3SampleApp/appsettings.Development.json
@@ -1,9 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Trace",
-      "System": "Trace",
-      "Microsoft": "Trace"
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
     }
   }
 }
